# real_tsudanuma2-3_sim

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: initial_pose.yaml  robot_pose.yaml
experiments/: experiment_cit3f_sim.sh  experiment_cit3f_viz.sh  experiment_cit3f_with_aisle.sh  experiment_cit3f_with_gamma.sh  experiment_cit3f_with_scan.sh  experiment_cit3f_with_turtlebot3.sh  experiment_cit3f_without_direction.sh  experiment_cit3f_without_move_base.sh  weighted_graph.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: gamma_navigation.launch  nav_cloning_sim.launch  nav_cloning_sim.launch.py  nav_cloning_sim_aisle.launch  nav_cloning_sim_org.launch  nav_cloning_sim_turtlebot3.launch  nav_cloning_sim_without.launch  turtlebot3_navigation.launch  turtlebot3_navigation.launch.py  turtlebot3_navigation_without.launch
log/: latest_build
maps/: cit_3f_without_direction_way.yaml  real_tsudanuma2-3.yaml  real_tsudanuma2-3_v2.yaml  real_tsudanuma2-3_way.yaml  real_tsudanuma2-3_way_scenario.yaml
models/tsudanuma2-3/: model.config  model.sdf
models/tsudanuma2-3_elevator/: model.config  model.sdf
models/tsudanuma2-3_elevator2/: model.config  model.sdf
models/tsudanuma2-3_gomi/: model.config  model.sdf
models/tsudanuma2-3_hot/: model.config  model.sdf
setup/: step1.bash
world/: tsudanuma2-3_v2.2.3_scan.world  tsudanuma2-3_v2.2.4.world  tsudanuma2-3_v2.2.5.world  tsudanuma2-3_v2.2.6.world  tsudanuma2-3_v2.3.3.world  tsudanuma2-3_v2.3.4.world  tsudanuma2-3_v2.3.5.world  tsudanuma_scan.world
(+29 files in other folders)
